--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,8 @@
     <li>
       {{this.name}}
       <a href="./todos/{{this._id}}">detail</a>
+      <a href="./todos/{{this._id}}/edit">edit</a>
+
     </li>
   {{/each}}
 </ul>
