--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,8 +4,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+    />
   </head>
-  <body>
-    {{{body}}}
+  <body class="bg-light">
+    <header>
+      <nav
+        class="navbar navbar-dark justify-content-between"
+        style="padding: 8px 16px;
+      background-color: #e95420;"
+      >
+        <a class="navbar-brand" href="/">Todo List</a>
+        <a class="btn btn-outline-light" href="/todos/new">Create</a>
+      </nav>
+    </header>
+    <main>
+      <div class="container mt-3">
+        {{{body}}}
+      </div>
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    ></script>
   </body>
 </html>
