--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     <title>Todo List</title>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      href="https://bootswatch.com/5/united/bootstrap.min.css"
     />
   </head>
   <body class="bg-light">
